--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ base64 = "0.21"
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0"
 thiserror = "1.0"
+clap = { version = "4.0", features = ["derive"] }
