--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ tokio = { version = "1", features = ["full"] }
 anyhow = "1.0"
 thiserror = "1.0"
 clap = { version = "4.0", features = ["derive"] }
+toml = "0.8"
+dirs = "5.0"
