--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,13 @@ description = "Rust crate/tool to download and keep up-to-date versions of the F
 readme = "README.md"
 authors = ["Jeremie Corbier <jeremie.corbier@gmail.com>"]
 
+[lib]
+path = "src/lib/lib.rs"
+
+[[bin]]
+name = "vac_downloader"
+path = "src/cli/main.rs"
+
 [dependencies]
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = { version = "1.0", features = ["derive"] }
